fix: dark mode icons

--- a/src/components/SideBar/index.module.css
+++ b/src/components/SideBar/index.module.css
@@ -47,6 +47,10 @@
   margin: 0 8px 0 0;
 }
 
+.side a svg path {
+  fill: var(--ifm-color-content);
+}
+
 .side h3 svg path {
   fill: var(--ifm-color-primary);
 }
